[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-tools>=0.1.34",
    "langgraph>=0.6.6",
    "langgraph-prebuilt>=0.6.4",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
]
